--- a/src/main/docker/DockerfileTemplate
+++ b/src/main/docker/DockerfileTemplate
@@ -2,5 +2,5 @@ FROM openjdk:8
 
 VOLUME /tmp
 ADD maven/${fileName}.jar ${fileName}.jar
-RUN sh -c 'touch /${fileName}.jar'
+RUN sh -c 'touch /${fileName}'
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/${fileName}.jar"]
